# nixconfig

./: .gitattributes  .gitignore  .gitmodules  configuration.nix  flake.nix  hardware-configuration.nix  secrets.nix  shell.nix
home-adisbladis-nixpkgs/: config.nix  desktop.nix  emacs.nix  exwm.nix  home.nix  mocha-inspect.patch  ssh-agent.nix
home-adisbladis-nixpkgs/dotfiles/: Xresources  elisp.nix  emacs.el
home-adisbladis-nixpkgs/emacs/: default.nix  emacs.el  weechat-el.patch
home-adisbladis-nixpkgs/overlays/: rust-overlay.nix
home-adisbladis-nixpkgs/pkcs-ssh-agent/: README.org  default.nix  deps.nix  go.mod  go.sum  main.go  shell.nix
hosts/bladis/: bladis.nix  configuration.nix  hardware-configuration.nix  lemmy.nix  lovescubalife.nix  synapse.nix
hosts/gari/: configuration.nix  hardware-configuration.nix
hosts/inari/: configuration.nix  hardware-configuration.nix
hosts/kombu/: configuration.nix  hardware-configuration.nix
hosts/mochi/: configuration.nix  hardware-configuration.nix
modules/: common.nix  default.nix  desktop.nix  ephemeral-root.nix  exwm.nix  fish.nix  gaming.nix  graphical-desktop.nix  home-manager.nix  laptop.nix  mullvad.nix  my-gaming.nix  my-laptop.nix  nix-ld.nix  nix.nix  overlays.nix  persistence.nix  podman.nix  simpleserver.nix  sound.nix  spell.nix  tmpfs.nix  tunnels.nix
nixops-deployment/: deployment.nix  shell.nix
nixops-deployment/nixops/: default.nix  pyproject.toml  shell.nix  update
pkgs/: svp.nix
profiles/: common.nix  graphical-desktop.nix  hardening.nix  laptop.nix  server.nix  tkssh.nix
(+65 files in other folders)
